Update dependencies; adapt to new API
- update dependencies, plugins
- adapt to the new Cryptomator API
- adapt package to Java 21
- log INFO instead of DEBUG