@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.llbrt.cryptofssrv</groupId>
 	<artifactId>cryfsmount</artifactId>
-	<version>2.0</version>
+	<version>3.0</version>
 	<packaging>jar</packaging>
 
 	<scm>
@@ -22,7 +22,8 @@
 	</licenses>
 
 	<properties>
-		<java.version>17</java.version>
+		<maven.version>3.9.5</maven.version>
+		<java.version>21</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
@@ -31,11 +32,12 @@
 		<cmd.umount>cryfsumount</cmd.umount>
 
 		<!-- Dependencies -->
-		<cryptomator-fuse.version>1.3.3</cryptomator-fuse.version>
-		<cryptomator-fs.version>2.4.0</cryptomator-fs.version>
-		<picocli.version>4.6.3</picocli.version>
-		<logback.version>1.2.10</logback.version>
-		<junit.version>5.8.2</junit.version>
+		<cryptomator-fuse.version>4.0.0</cryptomator-fuse.version>
+		<cryptomator-fs.version>2.6.8</cryptomator-fs.version>
+		<cryptomator-integration-linux.version>1.4.0</cryptomator-integration-linux.version>
+		<picocli.version>4.7.5</picocli.version>
+		<logback.version>1.4.14</logback.version>
+		<junit.version>5.10.1</junit.version>
 	</properties>
 
 	<dependencies>
@@ -49,6 +51,17 @@
 			<groupId>org.cryptomator</groupId>
 			<artifactId>cryptofs</artifactId>
 			<version>${cryptomator-fs.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cryptomator</groupId>
+			<artifactId>integrations-linux</artifactId>
+			<version>${cryptomator-integration-linux.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>de.swiesend</groupId>
+					<artifactId>secret-service</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- Logs -->
@@ -108,23 +121,35 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-shade-plugin</artifactId>
+				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
 						<goals>
-							<goal>shade</goal>
+							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<shadedArtifactAttached>false</shadedArtifactAttached>
-							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>com.github.llbrt.cryptofs.CryFsMount</mainClass>
-								</transformer>
-							</transformers>
-							<outputFile>${project.build.directory}/packaging/opt/${cmd.mount}/app/${cmd.mount}.jar</outputFile>
+							<outputDirectory>${project.build.directory}/packaging/opt/${cmd.mount}/app/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>com.github.llbrt.cryptofs.CryFsMount</mainClass>
+						</manifest>
+					</archive>
+					<outputDirectory>${project.build.directory}/packaging/opt/${cmd.mount}/app</outputDirectory>
+				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
@@ -159,7 +184,6 @@
 							<arguments>
 								<argument>--no-header-files</argument>
 								<argument>--no-man-pages</argument>
-								<argument>--compress=2</argument>
 								<argument>--strip-debug</argument>
 								<argument>--add-modules</argument>
 								<!-- Check the list of modules, especially when modifying dependencies -->
@@ -199,6 +223,9 @@
 						</goals>
 						<configuration>
 							<rules>
+								<requireMavenVersion>
+									<version>${maven.version}</version>
+								</requireMavenVersion>
 								<requireJavaVersion>
 									<version>${java.version}</version>
 								</requireJavaVersion>
@@ -219,47 +246,53 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 
 		<pluginManagement>
 			<plugins>
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.1</version>
+					<version>3.12.1</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.2.0</version>
+					<version>3.6.1</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.2.0</version>
+					<version>3.3.1</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M5</version>
+					<version>3.2.3</version>
 				</plugin>
 				<plugin>
-					<artifactId>maven-shade-plugin</artifactId>
-					<version>3.2.4</version>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.3.0</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-antrun-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>3.1.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>3.1.1</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-enforcer-plugin</artifactId>
-					<version>3.0.0</version>
+					<version>3.4.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>versions-maven-plugin</artifactId>
-					<version>2.8.1</version>
+					<version>2.16.2</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
