@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-exec /opt/${cmd.mount}/jre/bin/java -jar /opt/${cmd.mount}/app/${cmd.mount}.jar "$@"
+exec /opt/${cmd.mount}/jre/bin/java --enable-preview -jar /opt/${cmd.mount}/app/${cmd.mount}-${project.version}.jar "$@"
